--- a/_posts/2017-02-01-test-post.md
+++ b/_posts/2017-02-01-test-post.md
@@ -4,6 +4,6 @@ title:  "Test post"
 date:   2017-02-02 15:39:44 -0800
 categories: jekyll update
 ---
-<img src="/assets/wbb.png" >
+<img src="/assets/wbb2.png" >
 
 Test post for theme
