--- a/_posts/2017-02-05-test-post.md
+++ b/_posts/2017-02-05-test-post.md
@@ -4,6 +4,6 @@ title:  "Test post"
 date:   2017-02-04 15:39:44 -0800
 categories: jekyll update
 ---
-<img src="/assets/icebear.gif" >
+<img src="BASE/assets/icebear.gif" >
 
 rawr post 5 rawr why you no center
