--- a/_posts/2017-02-04-test-post.md
+++ b/_posts/2017-02-04-test-post.md
@@ -4,6 +4,6 @@ title:  "Test post"
 date:   2017-02-04 15:39:44 -0800
 categories: jekyll update
 ---
-<img src="/assets/banner.jpg" >
+<img src="BASE/assets/banner.jpg" >
 
 Some more text blah !
