--- a/_posts/2017-02-02-test-post.md
+++ b/_posts/2017-02-02-test-post.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  "Test post"
+title:  "Post 020202"
 date:   2017-02-02 15:39:44 -0800
 categories: jekyll update
+tags:
+- comics
 ---
 <img src="BASE/assets/wbb.png" >
 
