--- a/_posts/2017-02-04-test-post.md
+++ b/_posts/2017-02-04-test-post.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  "Test post"
+title:  "Post Rawrrr"
 date:   2017-02-04 15:39:44 -0800
 categories: jekyll update
+tags:
+- comics
 ---
 <img src="BASE/assets/banner.jpg" >
 
