--- a/_posts/2017-02-05-test-post.md
+++ b/_posts/2017-02-05-test-post.md
@@ -3,6 +3,8 @@ layout: post
 title:  "Test post"
 date:   2017-02-04 15:39:44 -0800
 categories: jekyll update
+tags:
+- comics
 ---
 <img src="BASE/assets/icebear.gif" >
 
