--- a/_posts/2017-02-06-test-post.md
+++ b/_posts/2017-02-06-test-post.md
@@ -1,11 +1,14 @@
 ---
 layout: post
-title:  "Post 0202"
+title:  "Blog 0"
 date:   2017-02-02 15:39:44 -0800
 categories: jekyll update
 tags:
-- comics
+- blog
 ---
 <img src="BASE/assets/wbb2.png" >
 
-Test post for theme
+This is a blog post.
+long blog.
+rawr rawr.
+lonnnnnggggg blog.
