--- a/_posts/2017-02-05-test-post.md
+++ b/_posts/2017-02-05-test-post.md
@@ -6,6 +6,6 @@ categories: jekyll update
 tags:
 - comics
 ---
-<img src="BASE/assets/icebear.gif" >
+<img src="BASE/assets/temp_card.png" >
 
 rawr post 5 rawr why you no center
