Improve home page post format. Remove everything show picture only.

--- a/_posts/2017-02-01-test-post.md
+++ b/_posts/2017-02-01-test-post.md
@@ -6,6 +6,6 @@ categories: jekyll update
 tags:
 - comics
 ---
-<img src="BASE/assets/wbb2.png" >
+<img src="BASE/assets/temp_dolphin.png" >
 
 Test post for theme
