--- a/_posts/2017-02-02-test-post.md
+++ b/_posts/2017-02-02-test-post.md
@@ -6,6 +6,6 @@ categories: jekyll update
 tags:
 - comics
 ---
-<img src="BASE/assets/wbb.png" >
+<img src="BASE/assets/temp_octo.png" >
 
 Test post for theme
