--- a/_posts/2017-02-04-test-post.md
+++ b/_posts/2017-02-04-test-post.md
@@ -6,6 +6,6 @@ categories: jekyll update
 tags:
 - comics
 ---
-<img src="BASE/assets/temp_card.png" >
+<img src="BASE/assets/temp_shark.png" >
 
 Some more text blah !
