--- a/_posts/2017-02-06-test-post.md
+++ b/_posts/2017-02-06-test-post.md
@@ -6,7 +6,7 @@ categories: jekyll update
 tags:
 - blog
 ---
-<img src="BASE/assets/temp_card.png" >
+<img src="BASE/assets/temp_dolphin.png" >
 
 This is a blog post.
 long blog.
