Add favicon. Add preview for all posts. Use preview instead of excerpt.

--- a/_posts/2017-01-01-temp-post.md
+++ b/_posts/2017-01-01-temp-post.md
@@ -2,9 +2,9 @@
 layout: post
 title:  "Temp post 0"
 date:   2017-01-01 15:39:44 -0800
+preview: "<img src=\"BASE/assets/temp_purple.png\" >"
 tags:
 - comics
 ---
-<img src="BASE/assets/temp_purple.png" >
 
 Some more text blah !
