--- a/_posts/2017-02-04-test-post.md
+++ b/_posts/2017-02-04-test-post.md
@@ -3,9 +3,9 @@ layout: post
 title:  "Post Rawrrr"
 date:   2017-02-04 15:39:44 -0800
 categories: jekyll update
+preview: "<img src=\"BASE/assets/temp_shark.png\" >"
 tags:
 - comics
 ---
-<img src="BASE/assets/temp_shark.png" >
 
 Some more text blah !
