--- a/_posts/2017-01-02-temp-post1.md
+++ b/_posts/2017-01-02-temp-post1.md
@@ -2,9 +2,10 @@
 layout: post
 title:  "Temp post 2"
 date:   2017-01-02 15:39:44 -0800
+preview: "<img src=\"BASE/assets/temp_green.png\" >"
 tags:
 - comics
 ---
-<img src="BASE/assets/temp_green.png" >
+
 
 Some more text blah !
