--- a/_posts/2017-02-01-test-post.md
+++ b/_posts/2017-02-01-test-post.md
@@ -2,10 +2,10 @@
 layout: post
 title:  "Post 0202"
 date:   2017-02-01 15:39:44 -0800
-categories: jekyll update
+preview: "<img src=\"BASE/assets/temp_dolphin.png\" >"
 tags:
 - comics
 ---
-<img src="BASE/assets/temp_dolphin.png" >
+
 
 Test post for theme
