--- a/_posts/2017-02-02-test-post.md
+++ b/_posts/2017-02-02-test-post.md
@@ -3,9 +3,10 @@ layout: post
 title:  "Post 020202"
 date:   2017-02-02 15:39:44 -0800
 categories: jekyll update
+preview: "<img src=\"BASE/assets/temp_octo.png\" >"
 tags:
 - comics
 ---
-<img src="BASE/assets/temp_octo.png" >
+
 
 Test post for theme
