--- a/_posts/2017-02-06-test-post.md
+++ b/_posts/2017-02-06-test-post.md
@@ -3,10 +3,11 @@ layout: post
 title:  "Blog 0"
 date:   2017-02-06 15:39:44 -0800
 categories: jekyll update
+preview: "<img src=\"BASE/assets/temp_dolphin.png\" >"
 tags:
 - blog
 ---
-<img src="BASE/assets/temp_dolphin.png" >
+
 
 This is a blog post.
 long blog.
