Layout blog content page

--- a/_posts/2017-02-04-test-post.md
+++ b/_posts/2017-02-04-test-post.md
@@ -2,8 +2,14 @@
 layout: post
 title:  "Post Rawrrr"
 date:   2017-02-04 15:39:44 -0800
-categories: jekyll update
 preview: "<img src=\"BASE/assets/temp_shark.png\" >"
+comic: "<img src=\"BASE/assets/temp_shark.png\" >"
+categories: test comic
+related: [
+"Temp post 2",
+"Post 0202",
+"Post 020202",
+]
 tags:
 - comics
 ---
