--- a/_posts/2017-01-02-temp-post1.md
+++ b/_posts/2017-01-02-temp-post1.md
@@ -3,6 +3,13 @@ layout: post
 title:  "Temp post 2"
 date:   2017-01-02 15:39:44 -0800
 preview: "<img src=\"BASE/assets/temp_green.png\" >"
+comic: "<img src=\"BASE/assets/temp_green.png\" >"
+categories: test comic
+related: [
+"Post 0202",
+"Post 020202",
+"Post Rawrrr",
+]
 tags:
 - comics
 ---
