--- a/_posts/2017-02-01-test-post.md
+++ b/_posts/2017-02-01-test-post.md
@@ -3,6 +3,13 @@ layout: post
 title:  "Post 0202"
 date:   2017-02-01 15:39:44 -0800
 preview: "<img src=\"BASE/assets/temp_dolphin.png\" >"
+comic: "<img src=\"BASE/assets/temp_dolphin.png\" >"
+categories: test comic
+related: [
+"Temp post 2",
+"Post 020202",
+"Post Rawrrr",
+]
 tags:
 - comics
 ---
