--- a/_posts/2017-02-02-test-post.md
+++ b/_posts/2017-02-02-test-post.md
@@ -2,8 +2,14 @@
 layout: post
 title:  "Post 020202"
 date:   2017-02-02 15:39:44 -0800
-categories: jekyll update
 preview: "<img src=\"BASE/assets/temp_octo.png\" >"
+comic: "<img src=\"BASE/assets/temp_octo.png\" >"
+categories: test comic
+related: [
+"Temp post 2",
+"Post 0202",
+"Post Rawrrr",
+]
 tags:
 - comics
 ---
