--- a/_posts/2017-02-06-test-post.md
+++ b/_posts/2017-02-06-test-post.md
@@ -2,12 +2,17 @@
 layout: post
 title:  "Blog 0"
 date:   2017-02-06 15:39:44 -0800
-categories: jekyll update
+categories: test blog
 preview: "<img src=\"BASE/assets/temp_dolphin.png\" >"
+related: [
+"Temp post 2",
+"Post 0202",
+"Post 020202",
+"Post Rawrrr",
+]
 tags:
 - blog
 ---
-
 
 This is a blog post.
 long blog.
