--- a/_posts/2017-01-02-temp-post1.md
+++ b/_posts/2017-01-02-temp-post1.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Temp post 2"
 date:   2017-01-02 15:39:44 -0800
-preview: "<img src=\"BASE/assets/temp_green.png\" >"
-comic: "<img src=\"BASE/assets/temp_green.png\" >"
+preview: "<img src=\"BASE/assets/pink.png\" >"
+comic: "<img src=\"BASE/assets/pink.png\" >"
 categories: test comic
 related: [
 "Post 0202",
